Fix map not showing

--- a/assets/css/event-list.css
+++ b/assets/css/event-list.css
@@ -4,10 +4,18 @@
 
 .msd-events__content {
     display: grid;
-    gap: var(--default-gap);
 }
 
 .msd-events__item__title {
     font-weight: 700;
     font-size: 20px;
 }
+
+.msd-events__item {
+    padding: 32px;
+}
+
+.msd-events__item--hl {
+    background: #f2f2f2;
+}
+
