--- a/assets/css/msd.css
+++ b/assets/css/msd.css
@@ -100,3 +100,8 @@ footer {
 .button:hover:before {
     width: 100%;
 }
+
+#map {
+    width: 100%;
+    height: 500px;
+}
